--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@ i:hover {
 
 /* Navigation */
 
+.nav {
+    max-height: 36px;
+}
+
 .nav-tabs {
     position: relative;
     transition-timing-function: ease-in-out;
@@ -32,7 +36,7 @@ i:hover {
     display: none;
     position: absolute;
     right: 5px;
-    top: 41px;
+    top: 35px;
     background: #fff;
     border: 1px solid #dee2e6;
     border-top: none;
