--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     max-height: 100vh;
     max-width: 100vw;
     font-size: 12px;
-    font-family: "Poppins",Arial,Helvetica,sans-serif;
+    font-family: 'Poppins', sans-serif;
     /* background-image: url("LXGLogo5.png");
     background-position: center;
     background-repeat: no-repeat; */
@@ -85,23 +85,25 @@ i:hover {
 }
 
 .pos-section {
-    width: 20%;
+    width: 19%;
 }
 
-.pos-section h6 {
-    border-bottom: 1px solid #dee2e6;
+.pos-section p {
+    font-size: 14px;
+    font-weight: bold;
+    margin-bottom: 2px;
 }
 
 .player-div {
-    margin: 0 auto 5px;
+    padding: 5px 0;
 }
 
-.player-div span {
-    margin-right: 5px;
-}
-
-.player-div:nth-child(odd) {
+.player-div:nth-child(even) {
     background-color: #f5f5f5;
+}
+
+.player-div span:first-of-type {
+    margin-right: 6px;
 }
 
 .check-off  {
@@ -118,16 +120,16 @@ i:hover {
     font-weight: normal;
 }
 
+.text-weight-bold {
+    font-weight: 600;
+}
+
 .watch {
     color: #6495ed;
-    font-weight: bold;
-    /* background-color: none; */
 }
 
 .avoid  {
     color: #ff0000;
-    font-weight: bold;
-    background-color: none;
 }
 
 .sheet-body {
@@ -158,6 +160,16 @@ i:hover {
 
 .loading-modal img {
     width: 200px;
+}
+
+/* Tier Details */
+
+.tier-header {
+color: #fff;
+background-color: #0374e7;
+font-size: 11px;
+padding: 2px 0px 2px 15px;
+border-radius: 5px;
 }
 
 
